--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,33 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.5.20"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+ext {
+    coreKtxVersion = '1.7.0'
+    appcompatVersion = '1.4.1'
+
+    materialVersion = '1.5.0'
+    recyclerviewVersion = '1.2.1'
+    cardviewVersion = '1.0.0'
+    constraintlayoutVersion = '2.1.3'
+
+    roomVersion = "2.4.1"
+    coroutinesVersion = "1.3.9"
+    lifecycleVersion = "2.4.0"
+
+    timberVersion = '4.7.1'
+
+    junitVersion = '4.13.2'
+    junitExtVersion = '1.1.3'
+    espressoVersion = '3.4.0'
 }
 
 task clean(type: Delete) {
