--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,11 +33,6 @@
         <activity
             android:name=".ui.transfer.TransferActivity"
             android:exported="false"
-            android:label="Transfer"
-            android:parentActivityName=".ui.transfer.TransferActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.marwaeltayeb.banking.ui.transfer.TransferActivity" />
-        </activity>
+            android:label="Transfer Money"/>
     </application>
 </manifest>
