--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ ext {
     junitVersion = '4.13.2'
     junitExtVersion = '1.1.3'
     espressoVersion = '3.4.0'
+
+    nav_version = "2.3.5"
 }
 
 task clean(type: Delete) {
